Fixed momentary misaligned UI elements when refreshing/loading

--- a/style.css
+++ b/style.css
@@ -135,6 +135,8 @@ canvas {
 
 	background-color: #317;
 	text-shadow: 0px 0px 3px #222;
+
+	display: hidden;
 }
 
 .okButton {
@@ -191,7 +193,7 @@ canvas {
 .sliderBar {
 	display: block;
 	width: 100%;
-	height: 20%;
+	height: 100%;
 	margin: 0;
 	padding: 0;
 	border-top-left-radius: 4px;
